# clc3-2025-project-aghaei-fallmann-steininger

./: Dockerfile  Dockerfile_old  README.md  docker-compose.monitoring.yml  docker-compose_monitoring.yml  instructions.md  monitoring.yml  prometheus.yml  pyproject.toml  requirements.txt  ticket_app.yml
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/workflows/: docker-build.yml
backend/: api_endpoints.py  database.py  models.py  requirements.txt
clc3_project/backend/: api_endpoints.py  database.py  models.py  requirements.txt
clc3_project/grafana/dashboards/: app-monitoring.json
clc3_project/grafana/provisioning/alerting/: alert-rules.yml  contact-points.yml  policies.yml
clc3_project/grafana/provisioning/dashboards/: dashboard.yml
clc3_project/prometheus/: prometheus.yml
clc3_project/stress_test/: locustfile.py  locustfile_random_deny.py  swarm_attack.py
docs/: deployment.md  project_proposal.md
grafana/dashboards/: app-monitoring.json
monitoring-results/: README.md
postman_collection/: API Endpoints.postman_collection.json
stress_test/: swarm_attack.py
