[project]
name = "clc3-2025-project-aghaei-fallmann-steininger"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.123.4",
    "locust>=2.42.6",
    "numpy>=2.4.1",
    "prometheus-client>=0.23.1",
    "psutil>=7.1.3",
    "uvicorn>=0.38.0",
]
